# OrthoPolyBasis

./: API_unification.md  COMPREHENSIVE_USER_MANUAL.md  Hermite_HDEG_CALC.md  Laguerre_in_QM.md  NoDiscrepancy_Laguerre_Legendre.md  OrthoPolyB-VerifyRoots.md  OrthoPolyB.tar  OrthoPolyB_np_mp.tar  OrthoPoly_HDEG_CALC.md  QuadratureAnalyzerClass.md  Spectral_Methods_an_Operational_Matrix.md  UnifiedQuadratureInterface.md  numpy_vs_mpmath.md  prompt-WriteOrthoPoly_np_mp.md  quadrature_analyzer.py  quadrature_analyzer_Op1.py  quadrature_analyzer_Qw0.py  verify_roots_chebyshev.py
chebyshev/: 019d6d24-9710-7763-b0f8-d87306bd8c21.md  Laguerre_in_QM.md  MANIFEST.in  README.md  USER_MANUAL.md  __init__.py  chebyshev_zeros.txt  clencurt.py  core.py  efficiency_ex_Chebyshev.py  efficiency_ex_Chebyshev_quad.py  fix_bom.py  mpmath_integration.py  numpy_integration.py  pyproject.toml  quadrature_roots.py  sympy_integration.py  test_clencurt_full.py  test_comprehensive.py  test_debug.py  test_package.py  test_quadrature.py  tests.py  verify_roots_chebyshev.py  verify_roots_chebyshev_mp.py
hermite/: USER_MANUAL.md  __init__.py  demo.py  efficiency_ex_Hermite.py  efficiency_ex_Hermite_quad.py  high_precision.py  integration.py  numerical.py  pyproject.toml  symbolic.py  test_hermite.py  test_numpy_vs_mpmath.py  verify_roots_hermite.py
laguerre/: MANIFEST.in  TEMP_MANUAL.md  USER_MANUAL.md  __init__.py  basis.py  efficiency_ex_Laguerre.py  efficiency_ex_Laguerre_quad.py  plot_laguerre.py  polynomial.py  pyproject.toml  test_laguerre.py  test_laguerre_fixed.py  test_numpy_vs_mpmath.py  utils.py  verify_roots_laguerre.py
legendre/: MANIFEST.in  README.md  USER_MANUAL.md  __init__.py  clenshaw_evaluation.py  core.py  efficiency_ex_Legendre.py  efficiency_ex_Legendre_quad.py  fix_bom.py  legendre.ipynb  mpmath_integration.py  numpy_integration.py  pyproject.toml  quadrature.py  quadrature_high_precision.py  stable_operations.py  sympy_integration.py  table_p9.py  table_p9_opt.py  test_clenshaw_series.py  test_fixes.py  test_numpy_vs_mpmath.py  test_quadrature.py  test_stable_operations.py  tests.py  verify_install.py  verify_roots_legendre.py
